# food-calo-estimate

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
FoodCaloEstimate/: asgi.py  celery.py  queue_tasks.py  settings.py  urls.py  wsgi.py
FoodCaloEstimate/estimator/: admin.py  apps.py
FoodCaloEstimate/estimator/admin_models/: __init__.py  chart_admin_model.py  confidence_range_filter.py  int_choices_filter.py  my_input_image_admin.py  my_input_image_form.py
FoodCaloEstimate/estimator/constants/: admin_model_constants.py  image_constants.py  machine_learning_constants.py  model_checkpoint_constants.py  my_food_calo_estimate_constants.py  parameter_constants.py
FoodCaloEstimate/estimator/machine_learning_models/: classification_model.py  model_manager.py  segmentation_model.py
FoodCaloEstimate/estimator/migrations/: 0001_initial.py  0002_myinputimage_deleted_at_myinputimage_is_deleted.py
FoodCaloEstimate/estimator/models/: __init__.py  abstract_input_image.py  my_input_image.py
FoodCaloEstimate/estimator/serializers/: input_image_serializer.py
FoodCaloEstimate/estimator/services/: cloudinary_service.py  food_dictionany_service.py  image_service.py  local_storage_service.py  machine_leaning_service.py
FoodCaloEstimate/estimator/urls/: __init__.py  input_image_urls.py
FoodCaloEstimate/iam/: admin.py  apps.py
FoodCaloEstimate/messages/: __init__.py  iam_messages.py
config/: .env.template
utils/: custom_exception_handler.py  custom_throttle.py  email_utils.py  message_response_utils.py  process_general_request.py  split_num_str.py
(+60 files in other folders)
